--- a/BiteBank.Portal/ByteBank.Portal.csproj
+++ b/BiteBank.Portal/ByteBank.Portal.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D8152F2C-7192-46B9-A9D8-AEFD5AA3A124}</ProjectGuid>
+    <ProjectGuid>{59802278-1430-4639-BF96-41A659363F0F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>BiteBank.Portal</RootNamespace>
-    <AssemblyName>BiteBank.Portal</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>ByteBank.Portal</RootNamespace>
+    <AssemblyName>ByteBank.Portal</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -35,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,14 +51,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\css\styles.css" />
-    <Content Include="Assets\js\main.js" />
-    <Content Include="ByteBank.Portal.csproj" />
-    <Content Include="View\Cambio\MXN.html" />
-    <Content Include="View\Cambio\USD.html" />
-    <Content Include="View\Cartoes\Credito.html" />
-    <Content Include="View\Cartoes\Debito.html" />
-    <Content Include="View\Home\Index.html" />
+    <EmbeddedResource Include="Assets\css\styles.css" />
+    <EmbeddedResource Include="Assets\js\main.js" />
+    <EmbeddedResource Include="View\Cambio\MXN.html" />
+    <EmbeddedResource Include="View\Cambio\USD.html" />
+    <EmbeddedResource Include="View\Cartoes\Credito.html" />
+    <EmbeddedResource Include="View\Cartoes\Debito.html" />
+    <EmbeddedResource Include="View\Home\Index.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
